# ssrlib

./: .gitignore  README.md  basic_pipeline.py  example_with_storage.py  prompt.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tensor_storage_test.py  test_datasets.py
.github/workflows/: python-package.yml
examples/: ae_with_probe.py  classifier_neural_collapse.py  dinov2_cifar10.py  embedder_comparison.py
sslib/: __init__.py
sslib/core/: __init__.py  base.py  config.py  pipeline.py  registry.py
sslib/datasets/: __init__.py  base.py  celeba.py  cifar10.py  food101.py  hf_mixin.py  hf_registry.py  hf_vision.py  imagenet100.py  kaggle_mixin.py  synthtest_dataset.py
sslib/embedders/: __init__.py  base.py
sslib/embedders/cv/: __init__.py  clip.py  dino.py  dinov2.py  vicreg.py
sslib/embedders/nlp/: __init__.py  bert.py  bert_base.py  e5.py  modernbert.py
sslib/losses/: __init__.py  base.py  contrastive_loss.py  deepinfomax_loss.py  infonce_loss.py  triplet_loss.py
sslib/processing/: __init__.py  base.py  covariance.py  effective_rank.py  leverage_scores.py  stable_rank.py  zca.py
sslib/storage/: __init__.py  tensor_storage.py
ssllib/core/: __init__.py  config.py
ssllib/embedders/cv/: dinov2.py
ssllib/embedders/nlp/: bert_base.py  modernbert.py
ssllib/losses/: __init__.py  contrastive_loss.py
ssllib/processing/: __init__.py  effective_rank.py  pairwise_stats.py
ssrlib/: __init__.py
ssrlib/analysis/: __init__.py  embedding_probe.py
ssrlib/core/: __init__.py  config.py  pipeline.py  registry.py
ssrlib/datasets/: __init__.py  base.py  celeba.py  food101.py  hf_registry.py  hf_vision.py  imagenet100.py  kaggle_mixin.py  synthtest_dataset.py
ssrlib/embedders/: __init__.py  base.py  mock.py
ssrlib/embedders/cv/: __init__.py  clip.py  dino.py  dinov2.py  vicreg.py
ssrlib/embedders/nlp/: __init__.py  bert.py  bert_base.py  e5.py  modernbert.py
ssrlib/losses/: __init__.py  base.py  contrastive_loss.py  deepinfomax_loss.py  infonce_loss.py  triplet_loss.py
ssrlib/processing/: __init__.py  _spectral.py  base.py  covariance.py  effective_rank.py  leverage_scores.py  map_reduce.py  neural_collapse.py  pairwise_stats.py  spectral_quality.py  spectrum.py  stable_rank.py  zca.py
ssrlib/storage/: tensor_storage.py
tests/: conftest.py  test_datasets.py  test_embedders.py  test_embedding_probe.py  test_map_reduce.py  test_neural_collapse.py  test_pipeline.py  test_processing.py  test_processors.py  test_processors_new.py  test_spectral.py
