[project]
name = "ssrlib"
version = "0.2.0"
description = "A modular Python framework for self-supervised representation analysis with automatic component discovery and training-time embedding monitoring"
authors = [
    {name = "Mikhail Kuznetov", email = "mmkuznecov2002@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Core dependencies
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "scipy>=1.10.0",
    # Image processing
    "Pillow>=9.0.0",
    # Utilities
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
hf = [
    # HuggingFace datasets and pre-trained models for HFVisionDataset
    # and the BERT/CLIP/E5/ModernBERT embedders.
    "datasets>=2.14.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
    "safetensors>=0.3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.10",
    "pylint>=2.15",
    "mypy>=1.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]
examples = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]
all = [
    # Convenience: hf + examples + scikit-learn for downstream analysis
    "datasets>=2.14.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
    "safetensors>=0.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "sentencepiece>=0.1.96",
]

[project.urls]
Homepage = "https://github.com/mmkuznecov/ssrlib"
Issues   = "https://github.com/mmkuznecov/ssrlib/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ssrlib"]

# -------------------------------------------------------------------------
# Tool configurations for development
# -------------------------------------------------------------------------

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:torch.*",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "examples/"]

[tool.coverage.run]
source = ["ssrlib"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
